ex-2.01/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-main-app-srv
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
